# G_TrakCare_Explorer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  G_TrakCare_Explorer.code-workspace  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/: project-rules.md  session-protocol.md
.agent/rules/: autopilot-guardrails.md
.agent/skills/: deep-research.md  project-init.md  session-management.md
.agent/workflows/: autopilot.md  consensus-panel.md  deep-research-update.md  long-session.md  monthly-insights.md  turbo-ops.md
.claude/: create-tests.md  help.md  insights-review.md  mcp.json  project-status.md  settings.local.json  team-review.md
.claude/commands/: autopilot.md  quick-review.md  update-docs.md
.claude/internal-agents/: answer-writer.md  code-reviewer.md  code-writer.md  db-analyst.md  documentation-writer.md  evidence-gatherer.md  plan-orchestrator.md  quality-guard.md  tool-runner.md
.claude/skills/: project-init.md
.codex/: LIMITATIONS.md  config.yaml
.codex/agents/: code-analyst.md  code-reviewer.md  db-analyst.md  deployer.md  doc-writer.md  researcher.md  test-writer.md
.codex/skills/: help.md  project-memory.md
.gemini/: code-analyst.toml  settings.json
.gemini/agents/: code-reviewer.toml  db-analyst.toml  deployer.toml  doc-writer.toml  test-writer.toml
.gemini/brain/: _session-template.md  context-snapshot.md  memory-index.md
.gemini/commands/: help.toml  migrate.toml
.gemini/rules/: core-rules.md  delegation-protocol.md  security-rules.md
.gemini/scripts/: deep-research.sh  parallel-agents.sh
.gemini/skills/: deep-research.md
.gemini/workflows/: feature-development.md  session-end.md  (+2 more)
.subagents/: auto-memory.ps1  auto-memory.sh  dispatch-team.ps1  dispatch-team.sh  dispatch.ps1  dispatch.sh  manifest.json  safe-write.ps1  schema.json
Flujograma/: INSTRUCCIONES.md  README.md
Manuales PDF/: 23MEUI_HOS_Enfermer_a_Hospitalizado.md  23MEUI_HOS_Gesti_n_de_Camas.md  23MEUI_HOS_Matrona_Hospitalizado_GO.md  25_09_25_Situacion_Actual_Cirugia_Ovalle_Acta_V2.md
docs/: CHANGELOG.md  DEVLOG.md  TASKS.md  TODO.md
scripts/: agent_health_check.py  agent_selftest.py  audit_ecosystem.py  cross_task.py  ecosystem_dashboard.py  env_resolver.py  knowledge_sync.py  mcp_governance.ps1  memory_sync.py  migrate_ecosystem.ps1  propagate.py  safe-write.sh  sync-knowledge.ps1  sync-knowledge.sh  sync-skills.ps1  template_sync.py
tests/: test_config.py
wiki/: requirements.txt
(+68 files in other folders)
